# Luan-Van-Tot-Nghiep

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  OCPP_handler.py  OCPP_message.py  README.md  WinCC_Tags_Auto.xlsx  database.js  docker-compose.yml  generate_tags.js  init.sql  package-lock.json  package.json  server.js
.github/: DEPLOYMENT.md
.github/workflows/: build-android-release.yml  deploy.yml
mobile-app/: .gitignore  ANDROID_BUILD_NOTES.md  Cargo.toml  capabilities.json  package-lock.json  package.json  tauri.conf.json
mobile-app/public/: app.js  index.html  style.css
mobile-app/public/auth/: auth.js  index.html  style.css
mobile-app/src/: lib.rs  main.rs
public/: app.js  index.html  style.css
public/SCADA/: app.js  index.html  style.css
public/customer/: app.js  index.html  style.css
