[package]
name = "ocpp-mobile-client"
version = "0.1.30"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "ocpp_mobile_client_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[profile.release]
opt-level = "z"      # Optimize for size instead of speed
lto = false          # Disable LTO for faster builds
codegen-units = 16   # More parallel compilation
